restructured SharpPhysics.Core

--- a/Core/Makefile
+++ b/Core/Makefile
@@ -1,5 +1,15 @@
-units-of-measurement:
-	$(MAKE) -C UnitsOfMeasurement
+REFS = 
+
+all: compile
+
+compile: bin/SharpPhysics.Core.dll
+
+bin/SharpPhysics.Core.dll: *.cs */*.cs
+	-mkdir bin
+	gmcs -debug+ \
+	     -out:bin/SharpPhysics.Core.dll -t:library \
+	     $(patsubst %,-r:%,$(REFS)) \
+	     *.cs */*.cs
 
 clean:
-	$(MAKE) clean -C UnitsOfMeasurement
+	-rm -r bin
